ADD - Started working on the nav bar. Left side of nav bar complete

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">    
+<html lang="en">  
+    <head>
+        <link rel="stylesheet" href="/css/styles.css">
+    </head>  
     <body>
+
+        <nav class="main-nav">
+            <img id="github-logo" src="/img/github-logo.png">
+            <input id="search-input" type="text" placeholder="Search or jump to..."/>
+            <a href="#">Pull requests</a>
+            <a href="#">Issues</a>
+            <a href="#">Codespaces</a>
+            <a href="#">Marketplace</a>
+            <a href="#">Explore</a>
+
+            <div class="nav-right">
+                <img class="icon" src="/img/bell-icon.svg">
+                <img class="icon" src="/img/plus-icon.png">
+
+                <a href="#">teest</a>
+            </div>
+
+            
+            
+        </nav>
+
         <div>Repo Page</div>
     </body>
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
 </html>
