--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,14 +15,19 @@
             <a href="#">Explore</a>
 
             <div class="nav-right">
-                <img class="icon" src="/img/bell-icon.svg">
-                <img class="icon" src="/img/plus-icon.png">
+                <div class="icon-glued">
+                    <img class="icon bell" src="/img/bell-icon.svg">
+                </div>
 
-                <a href="#">teest</a>
-            </div>
+                <div class="icon-glued">
+                    <img class="icon plus" src="/img/plus-icon.png">
+                    <img class="icon-2" src="/img/down-arrow.png">
+                </div>
 
-            
-            
+                <div id="has-icon-profile" class="icon-glued">
+                    <img class="icon-2" src="/img/down-arrow.png">
+                </div>
+            </div> 
         </nav>
 
         <div>Repo Page</div>
