ADD - quick fix

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             <div class="repository-section">
                 <div class="repo-nav">
                     <a href="#">Overview</a>
-                    <a href="#" class="active">Repositories</a>
+                    <a href="/index.html" class="active">Repositories</a>
                     <a href="#">Projects</a>
                     <a href="#">Packages</a>
                 </div> 
